--- a/css/style.css
+++ b/css/style.css
@@ -41,20 +41,7 @@ position: relative;
   0 0 60px rgb(255, 0, 221),
   0 0 140px rgb(134, 126, 127);
 }
-/* .text.sec-text::before{
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  
-  width: 100%; */
-  /* border-right: 5px solid;
-  background-color:  rgb(218, 214, 25);
-  border-left:  rgb(218, 214, 25);
-  animation: animate 1.6s  infinite,
-  cursor .4s step-end infinite alternate;
-  overflow: hidden;
-   */
+
 
    .container {
     position: relative;
@@ -70,7 +57,7 @@ position: relative;
     width: 280px;
     height: 160px;
     background: rgba(0, 0, 0, 0);
-    transition: background 0.5s ease;
+    
   }
   
   .container:hover .overlay {
@@ -138,16 +125,6 @@ position: relative;
   }
   
 
-
-/* } */
-/* @keyframes animate{
-  40%, 60%{
-    left: 100%;
-  }
-  100%{
-    left: 0%;
-  }
-} */
 
 .down{
   margin-left: 80px;
@@ -288,8 +265,11 @@ header.shadow {
   font-size: 22px;
   color: var(--text-color);
 }
-.social a:hover {
-  color: var(--hover);
+.social a :hover {
+  color:var(--hover)
+}
+.social >.youtubee :hover {
+  color: rgb(182, 53, 53);
 }
 .btn {
   display: inline-block;
@@ -611,9 +591,7 @@ form textarea {
     display: flex;
     justify-content: center;
   }
-  /* .BTN2{
-   padding-right: 50%;
-  } */
+  
   
   .skills-container {
     grid-template-columns: 1fr;
